Fixing and improving packer scripts.